--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "scikit-learn==1.3.2",
     "musicbrainzngs==0.7.1",
     "requests==2.31.0",
+    "beautifulsoup4==4.12.2",
     "python-dotenv==1.0.0",
     "pydantic==2.5.0",
     "pydantic-settings==2.1.0",
